--- a/style.css
+++ b/style.css
@@ -36,23 +36,23 @@ p.text4 {border:2px solid orange; width: 90%; background-color: rgba(250, 100, 5
 
 .box6 .ヘア1 {
   /* 左上に固定 */
-  top: 0;
-  left: 0;
+  top: 50px;
+  left: 10px;
 }
 .box6 .ヘア2 {
   /* 右下に固定 */
-  bottom: -5px;
-  left: 90px;
+  bottom: 50px;
+  right: 175px;
 }
 .box6 .ヘア3 {
   /* 右下に固定 */
-  top: 0;
-  right: 90px;
+  top: 50px;
+  left: 175px;
 }
 .box6 .ヘア4 {
   /* 右下に固定 */
-  bottom: -5px;
-  right: 0;
+  bottom: 50px;
+  right: 10px;
  }  
 
 .box7 img{
