--- a/style.css
+++ b/style.css
@@ -57,36 +57,36 @@ p.text4 {border:2px solid orange; width: 90%; background-color: rgba(250, 100, 5
 
 .box7 img{
   border:2px solid blue;
-  position: absolute;
   width: 45%;
+  position: absolute; 
 }
 
 .box7 .メニュー1 {
- 　top: 75px;
-  left: 15px;
+  left: 10px; 
+  margin-top: 80px; 
 }
-p.text8 {border:2px solid pink; width: 45%; background-color: rgba(250, 100, 50, 0.3); margin-left: auto; margin-top: 80px; }
+p.text8 {border:2px solid pink; width: 45%; background-color: rgba(250, 100, 50, 0.3); margin-left: 5px; margin-top: 80px; }
 .box9 img{
   border:2px solid blue;
   position: absolute;
   width: 45%;
-  margin-right: auto;
 }
 
 .box9 .emiko1 {
- margin-right: auto;
+ left: 10px; 
+ margin-top: 80px; 
 }
-p.text10 {border:2px solid blue; width: 50%; background-color: rgba(0, 200, 100, 0.3); margin-left: auto; }
+p.text10 {border:2px solid blue; width: 45%; background-color: rgba(0, 200, 100, 0.3); margin-left: 5px; margin-top: 80px; }
 .box11 img{
   border:2px solid blue;
   position: absolute;
   width: 45%;
-　margin-right: auto;
 }
 
 .box11 .店内3 {
- margin-right: auto;
+ left: 10px; 
+  margin-top: 80px; 
 }
-p.text12 {border:2px solid pink; width: 50%; background-color: rgba(250, 100, 50, 0.3); margin-left: auto; }
+p.text12 {border:2px solid pink; width: 45%; background-color: rgba(250, 100, 50, 0.3); margin-left: 5px; margin-top: 80px; }
 
 }  
