--- a/style.css
+++ b/style.css
@@ -1,18 +1,43 @@
 @charset "UTF-8";
-
-@media screen and (min-width:10px) and (max-width:500px){
   
 div.main1 {border:1px solid red; background-color: rgba(50, 50, 10, 0.1); }
-div.box2 {border:4px solid lime; height: 650px; background-color: rgba(200, 0, 50, 0.3); position: relative; }
+
+   .bar {
+   position: fixed; /* 固定配置 */
+   top: 10px;  /* 基点（ウィンドウ）からの距離 */
+   right: 20px;  /* 基点（ウィンドウ）からの距離 */
+   width: 20%;
+   border:1px solid #D49999; 
+   background-color:rgba(0,250,200,0.2);
+   z-index: 9;
+}
+
+p {
+  text-align:center; 
+  line-height: 95%;
+  position: relative; 
+  z-index: 10; 
+}
+  
+   .fixed p {
+  text-align:center;
+  line-height: 95%;
+  position: relative;
+  z-index: 10;    
+}
+
+div.box2 {border:4px solid lime; height: 650px; background-color: rgba(200, 0, 50, 0.3); position:relative; }
 .box3 img{
   border:2px solid blue;
   position: absolute;
   width: 90%;
 　margin: auto;
+　z-index: -10;
 }
 
 .box3 .店内1 {
  margin: auto;
+　z-index: -10;
 }
 
 p.text4 {border:2px solid orange; width: 90%; background-color: rgba(250, 100, 50, 0.3); margin: auto; }
@@ -65,7 +90,7 @@ p.text4 {border:2px solid orange; width: 90%; background-color: rgba(250, 100, 5
   left: 10px; 
   margin-top: 80px; 
 }
-p.text8 {border:2px solid pink; width: 45%; background-color: rgba(250, 100, 50, 0.3); margin-top: 80px; margin-left: auto; }
+p.text8 {border:2px solid aqua; width: 45%; background-color: rgba(250, 100, 50, 0.3); margin-top: 80px; margin-left: auto; }
 .box9 img{
   border:2px solid blue;
   position: absolute;
@@ -76,17 +101,55 @@ p.text8 {border:2px solid pink; width: 45%; background-color: rgba(250, 100, 50,
  left: 10px; 
  margin-top: 80px; 
 }
-p.text10 {border:2px solid blue; width: 45%; background-color: rgba(0, 200, 100, 0.3); margin-top: 80px; margin-left: auto; }
-.box11 img{
+p.text10 {border:2px solid aqua; width: 45%; background-color: rgba(0, 200, 100, 0.3); margin-top: 80px; margin-left: auto; }
+
+.box13 img {
+  border:2px solid pink;
+   margin-top: 20px;
+　 margin-left: 75px;
+  width: 25%;  
+　position:relative; 
+}
+
+.box13 .sns1 {
+ margin-top: 20px;
+ margin-left: 75px;
+　position:relative;
+}  
+
+.box13 a.sns1:hover img {
+  opacity: 0.6;
+}
+
+.box14 img {
   border:2px solid blue;
+   margin-top: 20px;
+　 margin-right: 75px;
+  width: 25%;  
+　position:relative; 
+}
+
+.box14 .sns1 {
+ margin-top: 20px;
+ margin-right: 75px;
+　position:relative;
+}  
+
+.box14 a.sns2:hover img {
+  opacity: 0.6;
+}
+  
+.box11 img{
+  border:2px solid orange;
   position: absolute;
   width: 45%;
 }
 
 .box11 .店内3 {
  left: 10px; 
-  margin-top: 80px; 
+  margin-top: 75px; 
 }
-p.text12 {border:2px solid pink; width: 45%; background-color: rgba(250, 100, 50, 0.3); margin-top: 80px; margin-left: auto; }
+  
+p.text12 {border:2px solid aqua; width: 45%; background-color: rgba(250, 100, 50, 0.3); margin-top: 100px; margin-left: auto; }
 
 }  
