--- a/style.css
+++ b/style.css
@@ -1,155 +1,84 @@
 @charset "UTF-8";
+
+@media screen and (min-width:10px) and (max-width:500px){
   
-div.main1 {border:1px solid red; background-color: rgba(50, 50, 10, 0.1); }
+div.祖 {border:2px solid blue; width: 100%; background-color: rgba(200, 0, 100, 0.2); display:flex; flex-flow: column; }
+div.親1 {border:2px solid aqua; width: 99%; height: 325px; background-color: rgba(0, 150, 50, 0.3); }
+div.親2 {border:2px solid lime; width: 99%; height: 650px; background-color: rgba(0, 150, 50, 0.3); }
 
-   .bar {
-   position: fixed; /* 固定配置 */
-   top: 10px;  /* 基点（ウィンドウ）からの距離 */
-   right: 20px;  /* 基点（ウィンドウ）からの距離 */
-   width: 20%;
-   border:1px solid #D49999; 
-   background-color:rgba(0,250,200,0.2);
-   z-index: 9;
-}
+div.店内1 img {border:2px solid orange; width: 75%; background-color: rgba(100, 250, 0, 0.2); z-index: -10; margin-top: 10%; margin-left: 10%; }
 
-p {
-  text-align:center; 
-  line-height: 95%;
-  position: relative; 
-  z-index: 10; 
-}
+div.text1 {border:2px solid orange; width: 85%; height: 325px; background-color: rgba(100, 250, 0, 0.2); margin-top: 5%; margin-left: 5%; }
+
+div.店内2 img {border:2px solid orange; width: 85%; background-color: rgba(100, 250, 0, 0.2); margin-top: 0%; margin-left: 10%; }
+
+div.メニュー1 img {border:2px solid orange; width: 35%; background-color: rgba(100, 250, 0, 0.2); margin-top: 10%; margin-left: 10%; }
+
+div.text2 {border:2px solid orange; width: 35%; height: 275px; background-color: rgba(100, 250, 0, 0.2); margin-top: -15%; margin-left: 55%; }
+
+div.emiko1 img {border:2px solid orange; width: 35%; background-color: rgba(100, 250, 0, 0.2); margin-top: 10%; margin-left: 10%; }
+
+div.text3 {border:2px solid orange; width: 35%; height: 275px; background-color: rgba(100, 250, 0, 0.2); margin-top: -15%; margin-left: 55%; }
+
+div.子 {border:2px solid orange; width: 85%; height: 275px; background-color: rgba(100, 250, 0, 0.2); margin-top: 0px; margin-left: 0px; }
+
+.sns1 {border:2px solid pink; width: 20%; background-color: rgba(0, 250, 50, 0.2); margin-top: 15%; margin-left: 15%; }
+.sns2 {border:2px solid aqua; width: 20%; background-color: rgba(150, 50, 00, 0.2); margin-top: -50%; margin-left: 55%; }  
   
-   .fixed p {
-  text-align:center;
-  line-height: 95%;
-  position: relative;
-  z-index: 10;    
 }
 
-div.box2 {border:4px solid lime; height: 650px; background-color: rgba(200, 0, 50, 0.3); position:relative; }
-.box3 img{
-  border:2px solid blue;
-  position: absolute;
-  width: 90%;
-　margin: auto;
-　z-index: -10;
-}
 
-.box3 .店内1 {
- margin: auto;
-　z-index: -10;
-}
+ @media screen and (min-width:501px) and (max-width:1400px){
+ 
+ div.祖 {border:2px solid blue; width: 100%; background-color: rgba(200, 0, 100, 0.2); display:flex; flex-flow: column; }
+div.親1 {border:2px solid aqua; width: 99%; height: 450px; background-color: rgba(0, 150, 50, 0.3); }
+div.親2 {border:2px solid lime; width: 99%; height: 900px; background-color: rgba(0, 150, 50, 0.3); }
 
-p.text4 {border:2px solid orange; width: 90%; background-color: rgba(250, 100, 50, 0.3); margin: auto; }
-.box5 img{
-  border:2px solid blue;
-  position: absolute;
-  width: 90%;
-　margin: auto;
-}
+div.店内1 img {border:2px solid orange; width: 75%; background-color: rgba(100, 250, 0, 0.2); z-index: -10; margin-top: -3%; margin-left: 10%; }
 
-.box5 .店内2 {
- margin: auto;
-}
+div.text1 {border:2px solid orange; width: 85%; height: 350px; background-color: rgba(100, 250, 0, 0.2); margin-top: -3%; margin-left: 5%; }
 
-/* 共通するCSS */
-.box6 img{
-  border:1px solid aqua; 
-  position: absolute; 
-  width: 35%;       /* 適当な幅を指定 */
-}
+div.店内2 img {border:2px solid orange; width: 75%; background-color: rgba(100, 250, 0, 0.2); margin-top: 0; margin-left: 15%; }
 
-.box6 .ヘア1 {
-  /* 左上に固定 */
-  top: 50px;
-  left: 10px;
-}
-.box6 .ヘア2 {
-  /* 右下に固定 */
-  bottom: 50px;
-  right: 175px;
-}
-.box6 .ヘア3 {
-  /* 右下に固定 */
-  top: 50px;
-  left: 175px;
-}
-.box6 .ヘア4 {
-  /* 右下に固定 */
-  bottom: 50px;
-  right: 10px;
- }  
+div.メニュー1 img {border:2px solid orange; width: 35%; background-color: rgba(100, 250, 0, 0.2); margin-top: 10%; margin-left: 10%; }
 
-.box7 img{
-  border:2px solid blue;
-  width: 45%;
-  position: absolute; 
-}
+div.text2 {border:2px solid orange; width: 35%; height: 490px; background-color: rgba(100, 250, 0, 0.2); margin-top: -55%; margin-left: 55%; }
 
-.box7 .メニュー1 {
-  left: 10px; 
-  margin-top: 80px; 
-}
-p.text8 {border:2px solid aqua; width: 45%; background-color: rgba(250, 100, 50, 0.3); margin-top: 80px; margin-left: auto; }
-.box9 img{
-  border:2px solid blue;
-  position: absolute;
-  width: 45%;
-}
+div.emiko1 img {border:2px solid orange; width: 35%; background-color: rgba(100, 250, 0, 0.2); margin-top: 10%; margin-left: 10%; }
 
-.box9 .emiko1 {
- left: 10px; 
- margin-top: 80px; 
-}
-p.text10 {border:2px solid aqua; width: 45%; background-color: rgba(0, 200, 100, 0.3); margin-top: 80px; margin-left: auto; }
+div.text3 {border:2px solid orange; width: 35%; height: 490px; background-color: rgba(100, 250, 0, 0.2); margin-top: -40%; margin-left: 55%; }
 
-.box13 img {
-  border:2px solid pink;
-   margin-top: 20px;
-　 margin-left: 75px;
-  width: 25%;  
-　position:relative; 
-}
+div.子 {border:2px solid orange; width: 85%; height: 490px; background-color: rgba(100, 250, 0, 0.2); margin-top: 0px; margin-left: 0px; }
 
-.box13 .sns1 {
- margin-top: 20px;
- margin-left: 75px;
-　position:relative;
-}  
-
-.box13 a.sns1:hover img {
-  opacity: 0.6;
-}
-
-.box14 img {
-  border:2px solid blue;
-   margin-top: 20px;
-　 margin-right: 75px;
-  width: 25%;  
-　position:relative; 
-}
-
-.box14 .sns2 {
- margin-top: 20px;
- margin-right: 75px;
-　position:relative;
-}  
-
-.box14 a.sns2:hover img {
-  opacity: 0.6;
-}
+.sns1 {border:2px solid pink; width: 10%; background-color: rgba(0, 250, 50, 0.2); margin-top: 15%; margin-left: 15%; }
+.sns2 {border:2px solid aqua; width: 10%; background-color: rgba(150, 50, 00, 0.2); margin-top: -50%; margin-left: 55%; }  
   
-.box11 img{
-  border:2px solid orange;
-  position: absolute;
-  width: 45%;
 }
 
-.box11 .店内3 {
- left: 10px; 
-  margin-top: 75px; 
-}
+   
+ @media screen and (min-width:1400px) and (max-width:2000px){  
+ 
+ div.祖 {border:2px solid blue; width: 100%; background-color: rgba(200, 0, 100, 0.2); display:flex; flex-flow: column; }
+div.親1 {border:2px solid aqua; width: 99%; height: 750px; background-color: rgba(0, 150, 50, 0.3); }
+div.親2 {border:2px solid lime; width: 99%; height: 750px; background-color: rgba(0, 150, 50, 0.3); }
+
+div.店内1 img {border:2px solid orange; width: 60%; background-color: rgba(100, 250, 0, 0.2); z-index: -10; margin-top: -0%; margin-left: 20%; }
+
+div.text1 {border:2px solid orange; width: 60%; height: 200px; background-color: rgba(100, 250, 0, 0.2); margin-top: 0%; margin-left: 20%; }
+
+div.店内2 img {border:2px solid orange; width: 45%; background-color: rgba(100, 250, 0, 0.2); margin-top: 0%; margin-left: 25%; }
+
+div.メニュー1 img {border:2px solid orange; width: 15%; background-color: rgba(100, 250, 0, 0.2); margin-top: 5%; margin-left: 10%; }
+
+div.text2 {border:2px solid orange; width: 35%; height: 400px; background-color: rgba(100, 250, 0, 0.2); margin-top: -20%; margin-left: 55%; }
+
+div.emiko1 img {border:2px solid orange; width: 15%; background-color: rgba(100, 250, 0, 0.2); margin-top: 5%; margin-left: 10%; }
+
+div.text3 {border:2px solid orange; width: 35%; height: 400px; background-color: rgba(100, 250, 0, 0.2); margin-top: -20%; margin-left: 55%; }
+
+div.子 {border:2px solid orange; width: 85%; height: 400px; background-color: rgba(100, 250, 0, 0.2); margin-top: 0px; margin-left: 0px; }
+
+.sns1 {border:2px solid pink; width: 10%; background-color: rgba(0, 250, 50, 0.2); margin-top: 15%; margin-left: 15%; }
+.sns2 {border:2px solid aqua; width: 10%; background-color: rgba(150, 50, 00, 0.2); margin-top: -50%; margin-left: 55%; }  
   
-p.text12 {border:2px solid aqua; width: 45%; background-color: rgba(250, 100, 50, 0.3); margin-top: 100px; margin-left: auto; }
-
-}  
+}
